# docqa

./: .gitignore  docker-compose.yml  test_rag.py
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  crud.py  database.py  dependancies.py  main.py  worker.py
backend/app/adapters/: vercel.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 056741f0eee8_ondelete_cascade_on_users.py  06efe6b12cfc_add_pydantic_ai_message_column.py  1ed025f7ecb5_added_document_field_to_workspaces.py  290f3ec0038a_remove_unique_constraints.py  3581b140f816_added_content_to_messages.py  38d4b52b4e95_workspace_id_nullable_in_docs.py  3f474a039148_remove_slug_from_workspace.py  6f9946ff7426_removed_workspaces_chats_have_1_to_many_.py  76f5d2704424_remove_all_tables_except_the_user.py  844d7999f93d_refactored_documents_and_pgvector.py  8caf957f0f56_add_workspace_id_to_chats.py  8da18c281d08_rename_file_path_to_file_url.py  acfbfcd76860_replace_content_with_ui_message_jsonb_.py  b15fe0b87587_user_workspace_workspace_member_tables.py  b60ed4221ddc_add_messages_table.py  b634daa22221_cascade_delete_messages_on_chat_delete.py  (+6 more)
backend/app/api/: deps.py  router.py
backend/app/models/: __init__.py  enums.py  user.py  workspace.py  workspace_member.py
backend/app/schemas/: __init__.py  chat.py  documents.py  responses.py  test.txt  user.py  workspace.py  workspace_member.py
backend/app/security/: cache.py  types.py  verify_token.py
backend/app/services/: ingestion.py  rag.py  storage.py
backend/app/utils/: prompt.py  stream.py  tools.py
(+70 files in other folders)
