[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "bs4>=0.0.2",
    "cryptography>=46.0.7",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "langchain-community>=0.4.1",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "langchain-voyageai>=0.3.3",
    "langchain[anthropic]>=1.2.15",
    "openai>=2.32.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pypdf>=6.10.2",
    "sqlmodel>=0.0.38",
    "svix>=1.90.0",
]
